--- a/project draft 1/Base.lproj/Main.storyboard
+++ b/project draft 1/Base.lproj/Main.storyboard
@@ -236,6 +236,14 @@
             </objects>
             <point key="canvasLocation" x="1646" y="137"/>
         </scene>
+        <!--Cart-->
+        <scene sceneID="sWz-Mw-EhL">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Cart" id="J9K-D1-zGK" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CL3-Ji-hac" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-212" y="885"/>
+        </scene>
         <!--Log In View Controller-->
         <scene sceneID="nrd-Rs-x0L">
             <objects>
@@ -318,29 +326,36 @@
                                     <action selector="remember:" destination="Ure-OS-pea" eventType="touchUpInside" id="Lny-7Z-gpP"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Log In Now" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0b-vh-FYF">
-                                <rect key="frame" x="20" y="341" width="283" height="52"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log In Now" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0b-vh-FYF">
+                                <rect key="frame" x="20" y="341" width="283" height="48"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="AKALAT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oe6-79-Lgh">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AKALAT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oe6-79-Lgh">
                                 <rect key="frame" x="178" y="154" width="108" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="WhatsApp Image 2022-08-12 at 2.31.25 PM" translatesAutoresizingMaskIntoConstraints="NO" id="YtJ-yO-9b6">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WhatsApp Image 2022-08-12 at 2.31.25 PM" translatesAutoresizingMaskIntoConstraints="NO" id="YtJ-yO-9b6">
                                 <rect key="frame" x="54" y="125" width="116" height="94"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="H6d-rf-Lv3"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="oe6-79-Lgh" firstAttribute="top" secondItem="H6d-rf-Lv3" secondAttribute="top" constant="110" id="0N1-Uk-VzY"/>
+                            <constraint firstItem="YtJ-yO-9b6" firstAttribute="top" secondItem="H6d-rf-Lv3" secondAttribute="top" constant="81" id="3M5-NX-eLg"/>
                             <constraint firstItem="l0b-vh-FYF" firstAttribute="leading" secondItem="H6d-rf-Lv3" secondAttribute="leading" constant="20" id="CUk-h8-S3P"/>
+                            <constraint firstItem="YtJ-yO-9b6" firstAttribute="height" secondItem="rKY-yS-fzr" secondAttribute="height" multiplier="0.104911" id="DbM-yZ-dqm"/>
+                            <constraint firstItem="l0b-vh-FYF" firstAttribute="top" secondItem="YtJ-yO-9b6" secondAttribute="bottom" constant="122" id="ID3-tM-lTN"/>
                             <constraint firstItem="l0b-vh-FYF" firstAttribute="width" secondItem="rKY-yS-fzr" secondAttribute="width" multiplier="0.683575" id="KAf-E4-c9o"/>
-                            <constraint firstItem="YtJ-yO-9b6" firstAttribute="width" secondItem="rKY-yS-fzr" secondAttribute="height" multiplier="29:224" id="NaN-YU-MTj"/>
+                            <constraint firstItem="oe6-79-Lgh" firstAttribute="width" secondItem="rKY-yS-fzr" secondAttribute="height" multiplier="27:224" id="KDW-kk-n8f"/>
+                            <constraint firstItem="l0b-vh-FYF" firstAttribute="top" secondItem="oe6-79-Lgh" secondAttribute="bottom" constant="151" id="Pft-u6-uFf"/>
+                            <constraint firstItem="oe6-79-Lgh" firstAttribute="leading" secondItem="YtJ-yO-9b6" secondAttribute="trailing" constant="8" id="hLM-ym-zDy"/>
+                            <constraint firstItem="YtJ-yO-9b6" firstAttribute="leading" secondItem="H6d-rf-Lv3" secondAttribute="leading" constant="54" id="mgU-Ih-vWO"/>
+                            <constraint firstItem="YtJ-yO-9b6" firstAttribute="width" secondItem="rKY-yS-fzr" secondAttribute="width" multiplier="0.280193" id="pz8-V7-kLY"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="6tT-pv-yAy"/>
